# EmbedCV

./: Makefile.in  configure.ac
include/: embedcv.h.in
sample/: Makefile.in  example_obj.sh  example_seg.sh  jpg2crop.c  jpg2ppm.c  ppm2blur.c  ppm2chroma.c  ppm2edge.c  ppm2fbox.c  ppm2jpg.c  ppm2morph.c  ppm2seg.c  ppm2tbox.c
src/: Makefile.in  codecjpeg.c  codecppm.c  draw.c  histogram.c  hough.c  intimage.c  manipulate.c  operate.c  utility.c  wrap_transupp.c
